tests/cases/parser/token_macros/multiple_macros.hash
// stage=parse, run=fail

// ~ERROR: cannot invoke two token macros on a single input tree
@[invoke(), invoke(2)] { ... }
